--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.5.2",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
