--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.5.2",
+    "@uploadthing/react": "^5.7.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uploadthing": "^5.7.4"
   },
   "devDependencies": {
     "@types/node": "^20",
